--- a/app/src/main/res/layout/item_gift_cart.xml
+++ b/app/src/main/res/layout/item_gift_cart.xml
@@ -25,6 +25,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
+        android:maxLines="1"
         android:text="@string/name"
         android:textAlignment="textStart"
         android:textColor="@color/primary_text"
@@ -41,6 +42,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginBottom="16dp"
+        android:maxLines="1"
         android:text="@string/for_someone"
         android:textSize="12sp"
         android:visibility="visible"
