--- a/app/src/main/res/layout/item_wishlist.xml
+++ b/app/src/main/res/layout/item_wishlist.xml
@@ -12,6 +12,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="8dp"
+        android:maxLines="1"
         android:text="@string/name"
         android:textAlignment="textStart"
         android:textColor="@color/primary_text"
